# python-training

./: .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 383402b9459b_create_users_posts_comments_tables.py
docs/: 00_overview.md  01_setup.md
docs/archive/: Formation_Python_Roadmap.md
docs/modules/module_01_fondations/: README.md
docs/modules/module_02_asyncio/: README.md
docs/modules/module_03_ecosysteme/: README.md
docs/modules/module_04_integration/: README.md
docs/references/: async_visual_guide.md  php_python_comparison.md
src/: __init__.py
src/module_01_fondations/: __init__.py  decorators_demo.py  generators_demo.py  gil_demo.py  log_analyzer.py  memory_leak_demo.py
src/module_02_asyncio/: __init__.py
src/module_02_asyncio/exercice_01_comparison/: sync_vs_async.py
src/module_02_asyncio/exercice_02_semaphore/: rate_limiter.py
src/module_02_asyncio/exercice_03_fastapi/: app.py
src/module_02_asyncio/exercice_04_websocket/: chat-client.html  chat_server.py
src/module_03_ecosysteme/: __init__.py
src/module_03_ecosysteme/exercice_01_pytest/: __init__.py  models.py  notifications.py  user_service.py  validators.py
src/module_03_ecosysteme/exercice_02_sqlalchemy/: __init__.py  database.py  models.py
src/module_03_ecosysteme/exercice_03_celery/: __init__.py  app.py  celery_app.py  tasks.py
src/module_04_integration/: __init__.py
src/module_04_integration/application/: __init__.py  event_handlers.py
src/module_04_integration/domain/: __init__.py  event_dispatcher.py  events.py  job_dispatcher.py  types.py
src/module_04_integration/infrastructure/: __init__.py  asyncio_event_dispatcher.py  celery_app.py  celery_job_dispatcher.py  celery_tasks.py  dependencies.py  sync_event_dispatcher.py
src/module_04_integration/infrastructure/http/: __init__.py  app.py  routes.py
tests/: __init__.py  conftest.py
tests/module_03_ecosysteme/: __init__.py
tests/module_03_ecosysteme/exercice_01_pytest/: __init__.py  conftest.py  test_user_service.py  test_validators.py
tests/module_03_ecosysteme/exercice_02_sqlalchemy/: __init__.py  conftest.py  test_models.py
tests/module_03_ecosysteme/exercice_03_celery/: __init__.py  conftest.py  test_tasks.py
tests/module_04_integration/: __init__.py
tests/module_04_integration/domain/: test_events.py
tests/module_04_integration/infrastructure/: conftest.py  test_asyncio_event_dispatcher.py  test_celery_job_dispatcher.py  test_celery_tasks.py  test_dependencies.py  test_sync_event_dispatcher.py
tests/module_04_integration/infrastructure/http/: test_routes.py
